// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TabBody > props > should render with prop active 1`] = `
<div
  aria-hidden="false"
  aria-labelledby="trigger-"
  class="podlove-component-tab-body overflow-hidden active overflow-y-auto"
  data-v-e2090dd9=""
  role="tabpanel"
  tabindex="0"
>
  <div
    class="tab-content"
    data-v-e2090dd9=""
  >
    
    <div>
      Inner Tab
    </div>
    
  </div>
</div>
`;

exports[`TabBody > props > should render with prop background 1`] = `
<div
  aria-hidden="true"
  aria-labelledby="trigger-"
  background="#fff"
  class="podlove-component-tab-body overflow-hidden"
  data-v-e2090dd9=""
  role="tabpanel"
  tabindex="0"
>
  <div
    class="tab-content"
    data-v-e2090dd9=""
  >
    
    <div>
      Inner Tab
    </div>
    
  </div>
</div>
`;

exports[`TabBody > props > should render with prop fixed 1`] = `
<div
  aria-hidden="true"
  aria-labelledby="trigger-"
  class="podlove-component-tab-body overflow-hidden fixed-height absolute top-0 left-0 w-full overflow-x-hidden"
  data-v-e2090dd9=""
  role="tabpanel"
  tabindex="0"
>
  <div
    class="tab-content"
    data-v-e2090dd9=""
  >
    
    <div>
      Inner Tab
    </div>
    
  </div>
</div>
`;

exports[`TabBody > props > should render with prop name 1`] = `
<div
  aria-hidden="true"
  aria-labelledby="trigger-tab-name"
  class="podlove-component-tab-body overflow-hidden"
  data-v-e2090dd9=""
  role="tabpanel"
  tabindex="0"
>
  <div
    class="tab-content"
    data-v-e2090dd9=""
  >
    
    <div>
      Inner Tab
    </div>
    
  </div>
</div>
`;

exports[`TabBody > props > should render without props 1`] = `
<div
  aria-hidden="true"
  aria-labelledby="trigger-"
  class="podlove-component-tab-body overflow-hidden"
  data-v-e2090dd9=""
  role="tabpanel"
  tabindex="0"
>
  <div
    class="tab-content"
    data-v-e2090dd9=""
  >
    
    <div>
      Inner Tab
    </div>
    
  </div>
</div>
`;
